<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvCurrent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvCurrent" />

    <EditText
        android:id="@+id/etCurrent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvNew" />

    <EditText
        android:id="@+id/etNew"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/tvConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvConfirm" />

    <EditText
        android:id="@+id/etConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

</LinearLayout>